--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,3 +40,7 @@
 @use 'blocks/article-view';
 @use 'blocks/card-detail';
 @use 'blocks/support';
+@use 'blocks/sign-up';
+@use 'blocks/sign-in';
+@use 'blocks//forget-password';
+@use 'blocks/register';
